# ClientFF

./: .clang-format  .gitignore  CMakeLists.txt  ClientFF.rc  README.md
config/: config.json
config/theme/: dark.json  default.json
src/: CMakeLists.txt
src/cpp/: ClientFF.cpp  ClientFF.h  main.cpp
src/cpp/Config/: Config.cpp  Config.h
src/cpp/File/: FileCtrl.cpp  FileCtrl.h
src/qml/: ClientFF.qml  main.qml
src/qml/component/box/: EasyCheckBox.qml  EasyComboBox.qml  FixedConfirmBox.qml  FixedWindowBox.qml  SkinMagicBox.qml  TipBox.qml
src/qml/component/button/: EasyBtn.qml  IconBtn.qml  SwitchBtn.qml
src/qml/component/image/: ImageSvg.qml
src/qml/component/input/: InputBox.qml
src/qml/component/menu/: EasyMenu.qml  EasyMenuItem.qml  EasyMenuSeparator.qml
src/qml/component/slider/: EasySlider.qml
src/qml/component/text/: EasyText.qml
src/qml/page/: Main.qml
src/qml/page/bar/: SideBar.qml  TitleBar.qml
src/qml/page/filepage/: FilePage.qml
src/qml/page/homepage/: HomePage.qml
src/qml/utils/: Utils.qml
src/qml/utils/color/: Color.qml
src/qml/utils/config/: Config.qml
src/qml/utils/theme/: Theme.qml
